--- a/public/create-envelope.html
+++ b/public/create-envelope.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Budget Tracking App</title>
+    <title>Create Envelope | Budget Tracking App</title>
     <!-- Bootstrap CDN  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header class="row">
-        <h1 class="text-center">Welcome To Budget Tracking App</h1>
+        <h1 class="text-center">Create Envelope</h1>
         <ul class="nav nav-underline mb-5 justify-content-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html"
