--- a/public/deposit.html
+++ b/public/deposit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Budget Tracking App</title>
+    <title>Deposit | Budget Tracking App</title>
     <!-- Bootstrap CDN  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header class="row">
-        <h1 class="text-center">Welcome To Budget Tracking App</h1>
+        <h1 class="text-center">Deposit Page</h1>
         <ul class="nav nav-underline mb-5 justify-content-center">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html"
@@ -45,38 +45,19 @@
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label"
-                  >Email address</label
+                  >Deposit Amount</label
                 >
                 <input
-                  type="email"
+                  type="number"
                   class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                  id="withdraw"
+                  aria-describedby="withdrawAmount"
                 />
                 <div id="emailHelp" class="form-text">
-                  We'll never share your email with anyone else.
+                  Enter the amount to deposit.
                 </div>
               </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Password</label
-                >
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                />
-              </div>
-              <div class="mb-3 form-check">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="exampleCheck1"
-                />
-                <label class="form-check-label" for="exampleCheck1"
-                  >Check me out</label
-                >
-              </div>
+
               <button type="submit" class="btn btn-primary">Submit</button>
             </form>
           </div>
